Updated HTML readability/notes, fixed header in absence of Bulma.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,19 @@
     background-attachment: fixed;
     background-position: 50%;
 }
+
+/* .body {
+    padding: 0px;
+    margin: 0px;
+}
+
+.heroimg {
+    background-color: #0096c7;
+
+}
+
+.hero-body {
+    background-color: #0096c7;
+    padding: 1px;
+} */
+
